force-app/main/default/objects/ServiceTicket__c/ServiceTicket__c.object-meta.xml
<CustomObject>
    <label>Senha</label>
    <nameField>
        <displayFormat>{YY}{MM}-{000000}</displayFormat>
        <label>Nome do Registro</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Senhas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>