force-app/main/default/objects/ServiceTicket__c/fields/Activities__c.field-meta.xml
<CustomField>
    <fullName>Activities__c</fullName>
    <description>Atividades Selecionadas</description>
    <label>Atividades</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>