force-app/main/default/objects/ServiceTicket__c/fields/Activity__c.field-meta.xml
<CustomField>
    <fullName>Activity__c</fullName>
    <description>Atividade</description>
    <label>Atividade</label>
    <length>100</length>
    <type>Text</type>
</CustomField>