force-app/main/default/objects/ServiceTicket__c/fields/ActivityPriority__c.field-meta.xml
<CustomField>
    <fullName>ActivityPriority__c</fullName>
    <description>Prioridade da Atividade</description>
    <label>Prioridade da Atividade</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>