force-app/main/default/objects/ServiceTicket__c/fields/Alias__c.field-meta.xml
<CustomField>
    <fullName>Alias__c</fullName>
    <description>Apelido do Cliente</description>
    <label>Apelido</label>
    <length>60</length>
    <type>Text</type>
</CustomField>