force-app/main/default/objects/ServiceTicket__c/fields/BusinessLineID__c.field-meta.xml
<CustomField>
    <fullName>BusinessLineID__c</fullName>
    <description>ID da Categoria</description>
    <label>ID da Categoria</label>
    <length>10</length>
    <type>Text</type>
</CustomField>