force-app/main/default/objects/ServiceTicket__c/fields/BusinessLineName__c.field-meta.xml
<CustomField>
    <fullName>BusinessLineName__c</fullName>
    <description>Nome da Categoria</description>
    <label>Categoria</label>
    <length>100</length>
    <type>Text</type>
</CustomField>