force-app/main/default/objects/ServiceTicket__c/fields/CustomerName__c.field-meta.xml
<CustomField>
    <fullName>CustomerName__c</fullName>
    <description>Nome do Cliente</description>
    <label>Cliente</label>
    <length>100</length>
    <type>Text</type>
</CustomField>