force-app/main/default/objects/ServiceTicket__c/fields/Document__c.field-meta.xml
<CustomField>
    <fullName>Document__c</fullName>
    <description>CPF</description>
    <label>CPF</label>
    <length>20</length>
    <type>Text</type>
</CustomField>