force-app/main/default/objects/ServiceTicket__c/fields/DocumentNumber__c.field-meta.xml
<CustomField>
    <fullName>DocumentNumber__c</fullName>
    <description>Número do Documento</description>
    <label>Nº Documento</label>
    <length>30</length>
    <type>Text</type>
</CustomField>