force-app/main/default/objects/ServiceTicket__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <description>Duração do Atendimento</description>
    <label>Duração do Atendimento</label>
    <length>8</length>
    <type>Text</type>
</CustomField>