force-app/main/default/objects/ServiceTicket__c/fields/ExternalID__c.field-meta.xml
<CustomField>
    <fullName>ExternalID__c</fullName>
    <description>ID Externo para Identificação do Registro na Base de Dados de Origem</description>
    <externalId>true</externalId>
    <label>ID Externo</label>
    <length>50</length>
    <type>Text</type>
</CustomField>