force-app/main/default/objects/ServiceTicket__c/fields/GeographicAreaCode__c.field-meta.xml
<CustomField>
    <fullName>GeographicAreaCode__c</fullName>
    <description>Código da Área Geográfica - DDD</description>
    <label>DDD</label>
    <length>3</length>
    <type>Text</type>
</CustomField>