force-app/main/default/objects/ServiceTicket__c/fields/InteractionID__c.field-meta.xml
<CustomField>
    <fullName>InteractionID__c</fullName>
    <description>ID da Interação (Serviço) do Cliente</description>
    <label>ID do Serviço</label>
    <length>10</length>
    <type>Text</type>
</CustomField>