force-app/main/default/objects/ServiceTicket__c/fields/InteractionName__c.field-meta.xml
<CustomField>
    <fullName>InteractionName__c</fullName>
    <description>Nome da Interação (Serviço) do Cliente</description>
    <label>Serviço</label>
    <length>100</length>
    <type>Text</type>
</CustomField>