force-app/main/default/objects/ServiceTicket__c/fields/Login__c.field-meta.xml
<CustomField>
    <fullName>Login__c</fullName>
    <description>Login de Rede do Atendente que Realizou o Atendimento</description>
    <label>Atendente</label>
    <length>20</length>
    <type>Text</type>
</CustomField>