force-app/main/default/objects/ServiceTicket__c/fields/MainDocumentTypeID__c.field-meta.xml
<CustomField>
    <fullName>MainDocumentTypeID__c</fullName>
    <description>ID do Tipo Documento Principal</description>
    <label>ID do Tipo Documento Principal</label>
    <length>10</length>
    <type>Text</type>
</CustomField>