force-app/main/default/objects/ServiceTicket__c/fields/MainDocumentTypeName__c.field-meta.xml
<CustomField>
    <fullName>MainDocumentTypeName__c</fullName>
    <description>Nome do Tipo Documento Principal</description>
    <label>Tipo Documento Principal</label>
    <length>100</length>
    <type>Text</type>
</CustomField>