force-app/main/default/objects/ServiceTicket__c/fields/NetworkNumber__c.field-meta.xml
<CustomField>
    <fullName>NetworkNumber__c</fullName>
    <description>Número do Celular</description>
    <label>Celular</label>
    <length>9</length>
    <type>Text</type>
</CustomField>