force-app/main/default/objects/ServiceTicket__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Notas</description>
    <label>Notas</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>