force-app/main/default/objects/ServiceTicket__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <description>Prioridade de Atendimento</description>
    <label>Prioridade</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>