force-app/main/default/objects/ServiceTicket__c/fields/Protocol__c.field-meta.xml
<CustomField>
    <fullName>Protocol__c</fullName>
    <description>Protocolo</description>
    <label>Protocolo</label>
    <length>20</length>
    <type>Text</type>
</CustomField>