force-app/main/default/objects/ServiceTicket__c/fields/SegmentID__c.field-meta.xml
<CustomField>
    <fullName>SegmentID__c</fullName>
    <description>ID da Segmentação do Cliente</description>
    <label>ID da Segmentação</label>
    <length>10</length>
    <type>Text</type>
</CustomField>