force-app/main/default/objects/ServiceTicket__c/fields/SegmentName__c.field-meta.xml
<CustomField>
    <fullName>SegmentName__c</fullName>
    <description>Nome da Segmentação do Cliente</description>
    <label>Segmentação</label>
    <length>100</length>
    <type>Text</type>
</CustomField>