force-app/main/default/objects/ServiceTicket__c/fields/ServiceEnd__c.field-meta.xml
<CustomField>
    <fullName>ServiceEnd__c</fullName>
    <description>Data e Hora do Término do Atendimento</description>
    <label>Término do Atendimento</label>
    <type>DateTime</type>
</CustomField>