force-app/main/default/objects/ServiceTicket__c/fields/ServiceStart__c.field-meta.xml
<CustomField>
    <fullName>ServiceStart__c</fullName>
    <description>Data e Hora do Início do Atendimento</description>
    <label>Início do Atendimento</label>
    <type>DateTime</type>
</CustomField>