force-app/main/default/objects/ServiceTicket__c/fields/SFPriority__c.field-meta.xml
<CustomField>
    <fullName>SFPriority__c</fullName>
    <description>Prioridade no Salesforce</description>
    <label>Prioridade no Salesforce</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>