force-app/main/default/objects/ServiceTicket__c/fields/SpecialNeeds__c.field-meta.xml
<CustomField>
    <fullName>SpecialNeeds__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Necessidades Especiais</description>
    <label>Necessidades Especiais</label>
    <type>Checkbox</type>
</CustomField>