force-app/main/default/objects/ServiceTicket__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status</description>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>On Hold</fullName>
                <default>true</default>
                <label>Em Espera</label>
            </value>
            <value>
                <fullName>In Service</fullName>
                <label>Em Atendimento</label>
            </value>
            <value>
                <fullName>Canceled</fullName>
                <label>Cancelada</label>
            </value>
            <value>
                <fullName>Closed</fullName>
                <label>Fechada</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>