force-app/main/default/objects/ServiceTicket__c/fields/Store__c.field-meta.xml
<CustomField>
    <fullName>Store__c</fullName>
    <description>Código da Loja</description>
    <label>Loja</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>