force-app/main/default/objects/ServiceTicket__c/fields/TicketId__c.field-meta.xml
<CustomField>
    <fullName>TicketId__c</fullName>
    <description>Número da Senha</description>
    <label>Senha</label>
    <length>20</length>
    <type>Text</type>
</CustomField>