force-app/main/default/objects/ServiceTicket__c/fields/WaitTime__c.field-meta.xml
<CustomField>
    <fullName>WaitTime__c</fullName>
    <description>Tempo de Espera</description>
    <label>Tempo de Espera</label>
    <length>8</length>
    <type>Text</type>
</CustomField>