force-app/main/default/objects/ServiceTicket__c/recordTypes/StoreServiceManager.recordType-meta.xml
<RecordType>
    <fullName>StoreServiceManager</fullName>
    <active>true</active>
    <description>Tipo de Registro do Atendimento de Senhas - GSS</description>
    <label>GSS - Atendimento de Senha</label>
</RecordType>