force-app/main/default/objects/ServiceTicket__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>RECORDTYPE</columns>
    <columns>CREATED_DATE</columns>
    <columns>Store__c</columns>
    <columns>TicketId__c</columns>
    <columns>CustomerName__c</columns>
    <columns>GeographicAreaCode__c</columns>
    <columns>NetworkNumber__c</columns>
    <columns>InteractionName__c</columns>
    <columns>WaitTime__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>