force-app/main/default/objects/ServiceTicket__c/listViews/Today.listView-meta.xml
<ListView>
    <fullName>Today</fullName>
    <columns>RECORDTYPE</columns>
    <columns>CREATED_DATE</columns>
    <columns>Store__c</columns>
    <columns>TicketId__c</columns>
    <columns>CustomerName__c</columns>
    <columns>GeographicAreaCode__c</columns>
    <columns>NetworkNumber__c</columns>
    <columns>InteractionName__c</columns>
    <columns>WaitTime__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Today</label>
</ListView>